chromeos: make sure fallback surface is applied *after* primary surface

As remote clients trigger setting the primary surface we have to cache the
fallback until the primary is available.

BUG=863083
TEST=none

Change-Id: I3af87f1397bfa4f42f8ab3bb569ef115737f0e91
Reviewed-on: https://chromium-review.googlesource.com/1135524
Reviewed-by: Saman Sami <samans@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574920}
Former-commit-id: a21e05dcbe694d29d60eabcb968f23c595d0da7b